--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,8 +1,8 @@
 <!-- Banner -->
 <section id="banner">
 	<div class="inner">
-		<h2>Iron Horse Fitness</h2>
-		<p>Your top of the line<br /> local gym for personal training<br /> and fitness</p>
+		<h2>Elite Aircraft Interiors</h2>
+		<p>Providing a wide variety of leather, fabrics, ultra-leather, carpet, and wood veneer designs</br> fit to meet each customer's desire</p>
 		<!--<ul class="actions">
 			<li><a href="#" class="button special">Welcome</a></li>
 		</ul>-->
