--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,7 +2,7 @@
 <section id="banner">
 	<div class="inner">
 		<h2>Elite Aircraft Interiors</h2>
-		<p>Providing a wide variety of leather, fabrics, ultra-leather, carpet, and wood veneer designs</br> fit to meet each customer's desire</p>
+		<p>BLAH BLAH BLAH</p>
 		<!--<ul class="actions">
 			<li><a href="#" class="button special">Welcome</a></li>
 		</ul>-->
