--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -2,8 +2,8 @@
 <section id="cta" class="wrapper style4">
 	<div class="inner">
 		<header>
-			<h2>Iron Horse Fitness</h2>
-			<p>Your top of the line local gym for personal fitness and training.</p>
+			<h2>Elite Aircraft Interiors</h2>
+			<p>Creating luxurious interiors for privately owned aircrafts since 2005.</p>
 		</header>
 		<ul class="actions vertical">
 			<li><a href="/contact.html" class="button fit special">Contact</a></li>
