--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -2,8 +2,11 @@
 <section id="one" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
-			<h2>Our Gym</h2>
-			<p>Iron Horse Fitness is a private training club in Danville, California that is comprised of hand selected, highly skilled fitness professionals. Our Health and Fitness professionals work with a wide-range of clientele and draw upon their competitive experience and expertise in Medicine, Health, Fitness and Wellness to create exciting, challenging and well balanced exercise programs. Each professional shares one common goal, to provide world-class service for health and fitness of each and every one of our clients. We have built our business by consistently delivering results, helping clients make gains, set goals, and by developing and maintaining a friendly club atmosphere, while adhering to solid business practices.We continue to put our hearts and souls into the business because it is just that…Our Business!</p>
+			<h2>About Us</h2>
+			<p>Elite Aircraft Interiors opened its doors in 2005 under the skills and knowledge of owner Arturo Navas. Starting his career in 1980, Arturo went on to building a name for himself for creating luxurious interiors for privately owned aircrafts. From all his experiences and business ventures he opened Elite Aircraft Interiors with the illusion of being able to provide the best service for aircraft interior designing for those looking for quality workmanship.
+			<br><br>Elite Aircraft Interiors prides itself for holding the reputation of classic, elegant, and unique custom design work. The company handles each relationship one-on-one to ensure that the customers wants and needs are fulfilled.
+			<br><br>Elite Aircraft Interiors makes it a point to have a wide variety of leather, fabrics, ultra-leather, carpet, and wood veneer designs fit to meet each customer's desire. The company believes that each individual wishes to show their personal style within these aircrafts. Quality work is very important for the company and Arturo stands firmly behind his product and designs. Elite Aircraft Interiors can proudly say that it has handcrafted some of the most beautiful aircraft interiors flying out there.
+			<br><br>But that's just the beginning. </p>
 			<div align="center" class="image.fit">
         			<img src="assets/images/gym1.jpg" style="height: 30%; width: 30%; padding: 10px 10px 10px 10px;" /><img src="assets/images/gym2.jpg" style="height: 30%; width: 30%; padding: 10px 10px 10px 10px;" /><img src="assets/images/gym4.jpg" style="height: 30%; width: 30%; padding: 10px 10px 10px 10px;" />
 
