--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,8 @@
 		<li><a href="{{ site.slack_url }}" class="icon fa-slack" target="_blank"><span class="label">Slack</span></a></li>
 		{% endif %} {% if site.linkedin_url %}
 		<li><a href="{{ site.linkedin_url }}" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+		{% endif %}{% if site.youtube_url %}
+		<li><a href="{{ site.youtube_url }}" class="icon fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
 		{% endif %}
 	</ul>
 	<ul class="copyright">
